# baby-shap

./: README.md  pyproject.toml
baby_shap/: __init__.py  _explanation.py
baby_shap/explainers/: __init__.py  _explainer.py  _kernel.py  _linear.py
baby_shap/maskers/: __init__.py  _masker.py  _tabular.py
baby_shap/plots/: _beeswarm.py  _force.py  _scatter.py  _summary.py  _utils.py
baby_shap/plots/colors/: _colors.py
baby_shap/utils/: _clustering.py  _exceptions.py  _legacy.py
tests/: conftest.py
tests/explainers/: test_linear.py
