[tool.poetry]
name = "baby-shap"
version = "0.0.3"
description = "A stripped and opiniated version of Scott Lundberg's SHAP (SHapley Additive exPlanations)"
authors = ["Thom Hopmans"]
license = "MIT"
readme = "README.md"
keywords = ["shap"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = ">=3.6.0"
pandas = ">=1.1.0"
numpy = ">=1.19.0"
scikit-learn = ">=1.0.0"
slicer = ">=0.0.7"
tqdm = ">=4.64.1"
ipython = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3"
pytest = "^6.2"
pytest-cov = "^2.12.1"
ruff = "^0.0.227"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["I", "E", "F", "UP"]
